--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="An immersive virtual office" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  rel="stylesheet"
+/>
+    <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
@@ -15,10 +19,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <!-- 
-      Hacky fix for peerjs' issue with Vite.
-      See: https://github.com/peers/peerjs/issues/753
-    -->
+
     <script>
       var parcelRequire;
     </script>
